# CmakeDemo

./: readmeKJK.txt
CmakeDemo/: CMakeLists.txt  main.c
CmakeDemo03/: CMakeLists.txt  main.c
CmakeDemo1/: CMakeLists.txt  power.c  power.h
CmakeDemo2/: CMakeLists.txt
CmakeDemo4/: CMakeLists.txt  config.h.in  main.c
CmakeDemo4/math/: power.c
